# lnp-node

./: .gitignore  Cargo.toml  flake.nix
cli/: Cargo.toml
nix/: shells.nix
rpc/: Cargo.toml
src/channeld/automata/: mod.rs
