[package]
name = "lnp-cli"
description = "LNP node command-line interface"
version = "0.9.1"
authors = ["Dr. Maxim Orlovsky <orlovsky@pandoracore.com>"]
license = "MIT"
keywords = ["bitcoin", "node", "lightning-network", "smart-contracts", "lnp"]
categories = ["network-programming", "command-line-utilities"]
edition = "2021"
rust-version = "1.59.0"
readme = "../README.md"
build = "build.rs"

[[bin]]
path = "src/main.rs"
name = "lnp-cli"

[dependencies]
amplify = "3.14.2"
lnp-core = { git = "https://github.com/yanganto/lnp-core.git", branch = "zmq", default-features = false  }
lnp_rpc = { version = "0.9.1", path = "../rpc" }
lightning-invoice = { version = "0.21.0", optional = true }
internet2 = { git = "https://github.com/yanganto/rust-internet2.git", branch = "zmq" }
microservices = { git = "https://github.com/yanganto/rust-microservices.git", branch = "zmq", default-features = false, features = ["cli"] }
shellexpand = "2.1"
clap = { version = "~3.2.23", features = ["derive", "env"] }
log = "0.4.14"

[build-dependencies]
amplify = "3.14.2"
clap = { version = "~3.2.23", features = ["derive", "env"] }
clap_complete = "~3.2.5"
lightning-invoice = "0.21.0"
internet2 = { git = "https://github.com/yanganto/rust-internet2.git", branch = "zmq" }
lnp-core = { git = "https://github.com/yanganto/lnp-core.git", branch = "zmq", default-features = false  }
lnp_rpc = { version = "0.9.1", path = "../rpc" }
configure_me_codegen = "0.4"

[features]
default = ["bolt", "bifrost"]
all = ["bolt", "bifrost"]

bolt = ["lnp-core/bolt", "lightning-invoice", "lnp_rpc/bolt"]
bifrost = ["lnp-core/bifrost", "lnp_rpc/bifrost"]
