[package]
name = "lnp_rpc"
description = "LNP node RPC API"
version = "0.9.1"
authors = ["Dr. Maxim Orlovsky <orlovsky@pandoracore.com>"]
license = "MIT"
keywords = ["bitcoin", "node", "lightning-network", "smart-contracts", "rpc"]
categories = ["network-programming"]
edition = "2021"
rust-version = "1.59.0"
readme = "../README.md"

[lib]
name = "lnp_rpc"

[dependencies]
amplify = "3.14.2"
strict_encoding = "0.9.0"
bitcoin_scripts = "0.9.0"
lnp-core = { git = "https://github.com/yanganto/lnp-core.git", branch = "zmq", default-features = false  }
lnpbp = "0.9.0"
bitcoin = { version = "0.29.2", features = ["rand"] }
lightning-invoice = { version = "0.21.0", optional = true }
internet2 = { git = "https://github.com/yanganto/rust-internet2.git", branch = "zmq" }
microservices = { git = "https://github.com/yanganto/rust-microservices.git", branch = "zmq", default-features = false, features = ["client"] }
descriptor-wallet = "0.9.0"
serde_crate = { package = "serde", version = "1", features = ["derive"], optional = true }
serde_with = { version = "1.14", optional = true }
serde_yaml = { version = "0.8", optional = true }
log = "0.4.14"
colored = "2.0.0"
zmq = { package = "zmq", version = "0.10.0" }

[features]
default = ["serde", "bolt", "bifrost"]
all = ["serde", "bolt", "bifrost"]

bolt = ["lnp-core/bolt", "lightning-invoice"]
bifrost = ["lnp-core/bifrost"]

serde = [
    "serde_crate", "serde_with", "serde_yaml", "bitcoin/serde",
    "amplify/serde", "internet2/serde", "microservices/serde",
    "lnpbp/serde", "descriptor-wallet/serde", "lnp-core/serde"
]
